--- a/auth/package.json
+++ b/auth/package.json
@@ -17,7 +17,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "lodash": "^4.17.21"
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -26,7 +29,9 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
+    "@types/mongoose": "^5.11.97",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
