--- a/gateway/package.json
+++ b/gateway/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/http-proxy-middleware": "^1.0.0",
     "@types/lodash": "^4.17.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
